# profgpu

./: .dockerignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  create_env.sh  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
api/: index.html
concepts/: index.html
docs/: api.md  concepts.md  faq.md  index.md  installation.md  notebooks.md  quickstart.md  troubleshooting.md
docs/reports/: enformer_gpu_profiling.md
docs/tutorials/: cli.md  logging.md  pytorch.md
examples/: cupy_matmul_bench.py  enformer_eval_gpu.py  export_samples_csv.py  log_jsonl.py  pytorch_example.py  pytorch_training_synthetic.py
faq/: index.html
installation/: index.html
notebooks/: 00_Check_GPU_and_Backends.ipynb  01_Decorator_Quickstart.ipynb  02_PyTorch_Training_Loop.ipynb  03_Async_Pitfalls.ipynb  04_CLI_Profile_Command.ipynb  05_Export_Samples_and_Plot.ipynb  06_CuPy_Benchmark.ipynb  gpu_samples.csv  index.html
quickstart/: index.html
reports/enformer_gpu_profiling/: index.html
search/: search_index.json
site/: 404.html  index.html
site/api/: index.html
site/concepts/: index.html
site/faq/: index.html
site/installation/: index.html
site/notebooks/: index.html
site/quickstart/: index.html
site/reports/enformer_gpu_profiling/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
site/tutorials/cli/: index.html
site/tutorials/logging/: index.html
site/tutorials/pytorch/: index.html
src/gpu_profile/: __init__.py  cli.py  monitor.py
src/profgpu/: __init__.py  __main__.py  cli.py  monitor.py
src/profgpu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
troubleshooting/: index.html
tutorials/cli/: index.html
tutorials/logging/: index.html
tutorials/pytorch/: index.html
